--- a/insure-landing-page-master/style.css
+++ b/insure-landing-page-master/style.css
@@ -83,4 +83,91 @@
     padding: 0.75rem 1.75rem;
     color: white;
   }
-  /*# sourceMappingURL=style.css.map */
+  .different h2{
+    font-size: 2.5rem;
+    padding: 3.75rem;
+  }
+  .different_list{
+    padding: 2.1875rem;
+    display: flex;
+    margin-left: 1rem;
+    font-family: 'DM Serif Display', serif;
+    margin-bottom: 3.125rem;
+    
+  }
+  .different_listItem-header{
+     padding: 1.25rem;
+     font-size: 1.875rem;
+     margin-left:-1.25rem;
+     font-weight:  bold;
+     
+    }
+    .findOut{
+      background: #2D2641;
+      margin-bottom: 4.375rem;
+      margin-left:3.125rem;
+      width: 65.625rem;
+      height: 11.25rem;
+   }
+   .findOut p{
+     font-size:2.5rem;
+     color: white;
+     font-family: 'Karla', sans-serif;
+     padding: 2.5rem;
+   }
+    .findOut button{
+      float: right;
+      margin-top: -5.9375rem;
+      margin-right: 3.75rem;
+      background: transparent;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 0.8125rem;
+      line-height: 1.15;
+      letter-spacing: 1.5px;
+      border: 1.5px solid white;
+      outline: none;
+      padding: 0.75rem 1.75rem;
+      color: white;
+    }
+    .footer{
+      padding: 0.3125rem;
+      background: hsl(0, 0%, 98%);
+      
+    }
+  
+    .footer_top{
+       display: flex;
+       padding: 10.625rem;
+       margin-left: -6.875rem;
+    } 
+    .footer_socials{
+      display: flex;
+      margin-left: 51.25rem;
+    }
+    hr{
+      margin-top: -5.625rem;
+      margin-left: 3.125rem;
+      width: 94%;
+    }
+    .footer_bottom{
+      display: flex;
+      padding:6.25rem; 
+    
+    }
+    .footer_bottom h3{
+      margin-top: -10.625rem;
+      margin-left: -10.625rem;
+      padding: 9.375rem;
+      font-weight: 100;
+      color: #2D2641;
+      }
+      .footer_bottom li{
+      margin-top: -0.625rem;
+      margin-left: -1.25rem;
+      line-height: 2.8;
+      font-weight: bold;
+      color: #2D2641;
+    
+      }
+     /*# sourceMappingURL=style.css.map */
